--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,15 @@ p {
   padding: 2rem 0;
   background-color: #f4f1ea;
   transition: background-color 0.5s ease;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s, transform 0.6s;
+}
+
+.page-section.fade-in-up {
+  opacity: 1;
+  transform: translateY(0);
+  animation: fadeInUp 0.8s ease forwards;
 }
 .page-section1 {
   padding: 0.5rem 0;
